# routinenotifier

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
design/: implementation.md
examples/: schedule.json  voice.json
instructions/: 202509120423.md  202509120542.md  202509120556.md  202509131423.md
prd/: main_prd.md
routinenotifier/: audio.py  cache.py  cli.py  config.py  scheduler.py  tts.py
tests/: test_cache.py  test_cli_validate.py  test_config.py  test_scheduler.py  test_voice_config.py
